# embedded-framework

./: CMakeLists.txt  Current-Problems.md  Ideas.md  Pain-points.md  Principles.md  README.md  Rules.md
apps/health_monitor/: main.c
apps/robot_demo/: CMakeLists.txt  README.md  main.c  robot_demo.c  robot_demo.h
core/module_manager/: READ.md  module.h  module_manager.c  module_manager.h
drivers/encoder/encoder_sim/: encoder_sim.c  encoder_sim.h
drivers/imu/imu_sim/: imu_sim.c  imu_sim.h
drivers/motor/motor_sim/: motor_sim.c  motor_sim.h
examples/event_basic/: CMakeLists.txt  main.c
examples/lipo_battery/lipo_battery_basic/: CMakeLists.txt  README.md  main.c
examples/logger/logger_basic/: CMakeLists.txt  README.md  main.c
examples/logger/logger_formatted/: CMakeLists.txt  main.c
examples/module_manager/module_context/: CMakeLists.txt  main.c
examples/module_manager/module_registration/: CMakeLists.txt  README.md  main.c
examples/scheduler/scheduler_basic/: CMakeLists.txt  README.md  main.c
examples/time/time_basic/: CMakeLists.txt  README.md  main.c
modules/lipo_battery/: README.md  lipo_battery.c  lipo_battery.h
osal/: osal.h
osal/posix/: osal_posix.c
platform/: platform.h
platform/linux/: platform_linux.c  platform_linux.h
services/event/: README.md  event.c  event.h
services/logger/: README.md  log_sink.h  log_types.h  logger.c  logger.h
services/scheduler/: README.md  scheduler.c  scheduler.h
services/time/: README.md  time.c  time.h
tests/event/: CMakeLists.txt  README.md  main.c
tests/lipo_battery/: CMakeLists.txt  README.md  main.c
tests/logger/: CMakeLists.txt  README.md  main.c
tests/module_manager/: CMakeLists.txt  main.c
tests/scheduler/: CMakeLists.txt  README.md  main.c
tests/time/: CMakeLists.txt  README.md  main.c
